<resources>
    <string name="app_name">FoodAppChallenge</string>
    <string name="desc_banner">Pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="title_banner">Diskon 30%</string>
    <string name="text_header">Hai, Ammar</string>
    <string name="desc_header">Mau makan apa hari ini?</string>
    <string name="text_header_menu">List Menu Makanan</string>
    <string name="text_button">Add</string>
    <string name="button_add_to_cart">Tambahkan ke Keranjang - %s</string>
    <string name="sum">1</string>
    <string name="location">Lokasi</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_history">Riwayat</string>
    <string name="menu_profile">Profile</string>
    <string name="profile_username">Username</string>
    <string name="profile_username_fill">Username</string>
    <string name="profile_password">Password</string>
    <string name="profile_password_fill">Password</string>
    <string name="profile_email">Email</string>
    <string name="profile_email_fill">Email</string>
    <string name="profile_no_telepon">No. Telepon</string>
    <string name="profile_no_telepon_fill">No. Telepon</string>
    <string name="header_profile">Profile</string>
</resources>